fix project page overflow css

--- a/src/scss/projectPage.scss
+++ b/src/scss/projectPage.scss
@@ -8,14 +8,16 @@
 
 .project-page {
   background-color: $background-color;
-  width: 100vw;
+  width: 100%;
+  overflow: hidden;
   color: white;
   @extend %flex-center;
   flex-direction: column;
+  position: relative;
 
   .container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     @extend %flex-center;
